fin basic logic, extra turn, win con, switch p1,2

--- a/Game/index.html
+++ b/Game/index.html
@@ -25,8 +25,32 @@
     <div id="gameContainer">
       <div class="leftHouseLand topRowHouseLand">
         <div class="dot"></div>
-        <div class="wall hWall" data-col="1 2" data-row="1"></div>
+        <div class="wall hWall" data-col="1" data-row="1"></div>
         <div class="dot"></div>
+        <div class="wall vWall" data-col="1" data-row="1"></div>
+        <div class="house" data-col="1" data-row="1" data-walls="0"></div>
+        <div class="wall vWall" data-col="1,2" data-row="1"></div>
+        <div class="dot"></div>
+        <div class="wall hWall" data-col="1" data-row="1,2"></div>
+        <div class="dot"></div>
+      </div>
+      <div class="otherHouseLand topRowHouseLand">
+        <div class="wall hWall" data-col="2" data-row="1"></div>
+        <div class="dot"></div>
+        <div class="house" data-col="2" data-row="1" data-walls="0"></div>
+        <div class="wall vWall" data-col="2,3" data-row="1"></div>
+        <div class="wall hWall" data-col="2" data-row="1,2"></div>
+        <div class="dot"></div>
+      </div>
+      <div class="otherHouseLand topRowHouseLand">
+        <div class="wall hWall" data-col="3" data-row="1"></div>
+        <div class="dot"></div>
+        <div class="house" data-col="3" data-row="1" data-walls="0" ></div>
+        <div class="wall vWall" data-col="3" data-row="1"></div>
+        <div class="wall hWall" data-col="3" data-row="1,2"></div>
+        <div class="dot"></div>
+      </div>
+      <!-- <div class="leftHouseLand otherRowHouseLand">
         <div class="wall vWall"></div>
         <div class="house"></div>
         <div class="wall vWall"></div>
@@ -34,17 +58,13 @@
         <div class="wall hWall"></div>
         <div class="dot"></div>
       </div>
-      <div class="otherHouseLand topRowHouseLand">
-        <div class="wall hWall"></div>
-        <div class="dot"></div>
+      <div class="otherHouseLand otherRowHouseLand">
         <div class="house"></div>
         <div class="wall vWall"></div>
         <div class="wall hWall"></div>
         <div class="dot"></div>
       </div>
-      <div class="otherHouseLand topRowHouseLand">
-        <div class="wall hWall"></div>
-        <div class="dot"></div>
+      <div class="otherHouseLand otherRowHouseLand">
         <div class="house"></div>
         <div class="wall vWall"></div>
         <div class="wall hWall"></div>
@@ -69,27 +89,7 @@
         <div class="wall vWall"></div>
         <div class="wall hWall"></div>
         <div class="dot"></div>
-      </div>
-      <div class="leftHouseLand otherRowHouseLand">
-        <div class="wall vWall"></div>
-        <div class="house"></div>
-        <div class="wall vWall"></div>
-        <div class="dot"></div>
-        <div class="wall hWall"></div>
-        <div class="dot"></div>
-      </div>
-      <div class="otherHouseLand otherRowHouseLand">
-        <div class="house"></div>
-        <div class="wall vWall"></div>
-        <div class="wall hWall"></div>
-        <div class="dot"></div>
-      </div>
-      <div class="otherHouseLand otherRowHouseLand">
-        <div class="house"></div>
-        <div class="wall vWall"></div>
-        <div class="wall hWall"></div>
-        <div class="dot"></div>
-      </div>
+      </div> -->
     </div>
   </main>
   
