added player scores, and class to house when fin

--- a/Game/index.html
+++ b/Game/index.html
@@ -10,14 +10,14 @@
   <header>
     
     <!-- <div class="scoreBoard"> -->
-      <div class="playerHouses">
+      <div class="playerHouses p1">
         <h2>Player 1 Houses:</h2>
-        <div class="houseCount" id="p1Hcount"></div>
+        <div class="houseCount p1" id="p1Hcount">0</div>
       </div>
       <h1 id="gameName">Houses</h1>
-      <div class="playerHouses">
+      <div class="playerHouses p2">
         <h2>Player 2 Houses:</h2>
-        <div class="houseCount" id="p2Hcount"></div>
+        <div class="houseCount p2" id="p2Hcount">0</div>
       </div>
     <!-- </div> -->
   </header>
