added some sudo code to the js

--- a/Game/index.html
+++ b/Game/index.html
@@ -95,7 +95,13 @@
       </div> -->
     </div>
     <div class="buttons">
-      <div class="button" id="clearButton"><p>Clear Bord</p></div>
+      <div class="button" id="clearButton"><p>Clear Bord</p>
+      </div>
+      <div class="colRowInput" id="col"># of columns</div>
+      <input type="number" class="numInput" id="colInput" value="3">
+      <div class="colRowInput" id="row"># of rows</div>
+      <input type="number" class="numInput" id="rowInput" value="3">
+      <div class="button" id="generateBord"><p>Generate Bord</p></div>
     </div>
   </main>
   
