finished adding auto generation for table

--- a/Game/index.html
+++ b/Game/index.html
@@ -26,7 +26,7 @@
   </header>
   <main>
     <div id="gameContainer">
-      <div class="land leftHouseLand topRowHouseLand">
+      <!-- <div class="land leftHouseLand topRowHouseLand">
         <div class="dot"></div>
         <div class="wall hWall" data-col="1" data-row="1"></div>
         <div class="dot"></div>
@@ -52,7 +52,7 @@
         <div class="wall vWall" data-col="3" data-row="1"></div>
         <div class="wall hWall" data-col="3" data-row="1,2"></div>
         <div class="dot"></div>
-      </div>
+      </div> -->
       <!-- <div class="land leftHouseLand otherRowHouseLand">
         <div class="wall vWall"></div>
         <div class="house"></div>
