--- a/Game/index.html
+++ b/Game/index.html
@@ -10,17 +10,17 @@
   <header>
     
     <!-- <div class="scoreBoard"> -->
-      <div class="playerHouses p1">
+      <div class="playerHouses ph1">
         <h2>Player 1 Houses:</h2>
-        <div class="houseCount p1" id="p1Hcount">0</div>
+        <div class="houseCount ph1" id="p1Hcount">0</div>
       </div>
-      <div>
-      <h1 id="gameName">Houses</h1>
-      <div id="currentPlayer"></div>
+      <div id="logo">
+        <h1 id="gameName">Houses</h1>
+        <div id="currentPlayer"></div>
       </div>
-      <div class="playerHouses p2">
+      <div class="playerHouses ph2">
         <h2>Player 2 Houses:</h2>
-        <div class="houseCount p2" id="p2Hcount">0</div>
+        <div class="houseCount ph2" id="p2Hcount">0</div>
       </div>
     <!-- </div> -->
   </header>
@@ -30,11 +30,15 @@
     <div class="buttons">
       <div class="button" id="clearButton"><p>Clear Bord</p>
       </div>
-      <div class="colRowInput" id="col"># of columns</div>
-      <input type="number" class="numInput" id="colInput" value="3">
-      <div class="colRowInput" id="row"># of rows</div>
-      <input type="number" class="numInput" id="rowInput" value="3">
-      <div class="button" id="generateBord"><p>Generate Bord</p></div>
+      <div class="genBordContainer">
+        <div class="inputContainer">
+          <div class="colRowInput" id="col"># of columns</div>
+          <input type="number" class="numInput" id="colInput" value="3">
+          <div class="colRowInput" id="row"># of rows</div>
+          <input type="number" class="numInput" id="rowInput" value="3">
+        </div>
+        <div class="button" id="generateBord"><p>Generate Bord</p></div>
+      </div>
     </div>
   </main>
   
