--- a/Game/index.html
+++ b/Game/index.html
@@ -7,8 +7,8 @@
   <link rel="stylesheet" type="text/css" href="styles/main.css">
 </head>
 <body>
+  <div class="sun"></div>
   <header>
-    
     <!-- <div class="scoreBoard"> -->
       <div class="playerHouses ph1">
         <h2>Player 1 Houses:</h2>
@@ -41,7 +41,6 @@
       </div>
     </div>
   </main>
-  
   <script src="scripts/logic.js"></script>
 </body>
 </html>
