--- a/Game/index.html
+++ b/Game/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <div class="sun"></div>
+  <div class="cloud"></div>
   <header>
     <!-- <div class="scoreBoard"> -->
       <div class="playerHouses ph1">
@@ -33,9 +34,9 @@
       <div class="genBordContainer">
         <div class="inputContainer">
           <div class="colRowInput" id="col"># of columns</div>
-          <input type="number" class="numInput" id="colInput" value="3">
+          <input type="number" class="numInput" id="colInput" value="3" min="1" max="30">
           <div class="colRowInput" id="row"># of rows</div>
-          <input type="number" class="numInput" id="rowInput" value="3">
+          <input type="number" class="numInput" id="rowInput" value="3" min="1">
         </div>
         <div class="button" id="generateBord"><p>Generate Bord</p></div>
       </div>
