added pause to the sound in clear func

--- a/Game/index.html
+++ b/Game/index.html
@@ -9,6 +9,7 @@
 <body>
   <div class="sun"></div>
   <div class="cloud"></div>
+  <div class="win"></div>
   <header>
     <!-- <div class="scoreBoard"> -->
       <div class="playerHouses ph1">
