fixed responsive width for score

--- a/Game/index.html
+++ b/Game/index.html
@@ -14,16 +14,16 @@
     <!-- <div class="scoreBoard"> -->
       <div class="playerHouses ph1">
         <div>
-          <h2>Player 1 Houses:</h2>
-          <div class="houseCount ph1" id="p1Hcount">0</div>
+          <h2>P1Houses:</h2>
+          <div class="houseCount ph1"><div id="p1Hcount"><div id="p1Hcount">0</div></div></div>
         </div>
         <div>
-          <h2>Wins</h2>
-          <div class="houseCount ph1" id="p1TotalWins">0</div>
+          <h2>Wins:</h2>
+          <div class="houseCount ph1"><div id="p1TotalWins"><div id="p1TotalWins">0</div></div></div>
         </div>
         <div>
-          <h2>Ties</h2>
-          <div class="houseCount ph1" id="Ties1">0</div>
+          <h2>Ties:</h2>
+          <div class="houseCount ph1"><div id="Ties1">0</div></div>
         </div>
       </div>
       <div id="logo">
@@ -32,15 +32,15 @@
       </div>
       <div class="playerHouses ph2">
         <div>
-          <h2>Player 2 Houses:</h2>
+          <h2>P2Houses:</h2>
           <div class="houseCount ph2" id="p2Hcount">0</div>
         </div> 
         <div>
-          <h2>Wins</h2>
+          <h2>Wins:</h2>
           <div class="houseCount ph2" id="p2TotalWins">0</div>
         </div>
         <div>
-          <h2>Ties</h2>
+          <h2>Ties:</h2>
           <div class="houseCount ph2" id="Ties2">0</div>
         </div>
       </div>
