added a computer player

--- a/Game/index.html
+++ b/Game/index.html
@@ -43,8 +43,8 @@
           <div class="houseCount ph2" id="p2TotalWins">0</div>
         </div>
         <div>
-          <h2>Ties:</h2>
-          <div class="houseCount ph2" id="Ties2">0</div>
+          <h2>Comp:</h2>
+          <input type="checkbox" class="houseCount ph2" id="comp" value="computer">
         </div>
       </div>
     <!-- </div> -->
