cloud pos to fixed to fix overflow issue on mobile

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Houses</title>
+  <meta name="viewport" content="width=device-width, height=device-height">
+  <title>Game of Houses</title>
   <link href="http://fonts.googleapis.com/css?family=Exo+2:400,300,200,900,700,600,500" rel="stylesheet" type="text/css">
   <link rel="stylesheet" type="text/css" href="styles/main.css">
 </head>
@@ -29,7 +30,7 @@
         </div>
       </div>
       <div id="logo">
-        <h1 id="gameName">Houses</h1>
+        <h1 id="gameName">Game of Houses</h1>
         <div id="currentPlayer"></div>
       </div>
       <div class="playerHouses ph2">
