window height and player win disp

--- a/index.html
+++ b/index.html
@@ -14,40 +14,48 @@
   <div class="win"></div>
   <header>
     <!-- <div class="scoreBoard"> -->
+    <div class="scoreContainer">
       <div class="playerHouses ph1">
         <h2 class="playerName" id="p1Name" contenteditable="true">Player 1</h2>
         <div>
-          <h2>Houses:</h2>
-          <div class="houseCount ph1" id="p1Hcount">0</div>
-        </div>
-        <div>
-          <h2>Wins:</h2>
-          <div class="houseCount ph1" id="p1TotalWins">0</div>
-        </div>
-        <div>
-          <h2>Ties:</h2>
-          <div class="houseCount ph1"  id="Ties1">0</div>
+          <div>
+            <h2>Houses:</h2>
+            <div class="houseCount ph1" id="p1Hcount">0</div>
+          </div>
+          <div>
+            <h2>Wins:</h2>
+            <div class="houseCount ph1" id="p1TotalWins">0</div>
+          </div>
+          <div>
+            <h2>Ties:</h2>
+            <div class="houseCount ph1"  id="Ties1">0</div>
+          </div>
         </div>
       </div>
-      <div id="logo">
-        <h1 id="gameName">Game of Houses</h1>
-        <div id="currentPlayer"></div>
-      </div>
+    </div> 
+    <div id="logo">
+      <h1 id="gameName">Game of Houses</h1>
+      <div id="currentPlayer"></div>
+    </div>
+    <div class="scoreContainer">
       <div class="playerHouses ph2">
         <h2 class="playerName" id="p2Name" contenteditable="true">Player 2</h2>
         <div>
-          <h2>Houses:</h2>
-          <div class="houseCount ph2" id="p2Hcount">0</div>
-        </div> 
-        <div>
-          <h2>Wins:</h2>
-          <div class="houseCount ph2" id="p2TotalWins">0</div>
-        </div>
-        <div>
-          <h2>Comp:</h2>
-          <input type="checkbox" class="houseCount ph2" id="comp" value="computer">
+          <div>
+            <h2>Houses:</h2>
+            <div class="houseCount ph2" id="p2Hcount">0</div>
+          </div> 
+          <div>
+            <h2>Wins:</h2>
+            <div class="houseCount ph2" id="p2TotalWins">0</div>
+          </div>
+          <div>
+            <h2>Comp:</h2>
+            <input type="checkbox" class="houseCount ph2" id="comp" value="computer">
+          </div>
         </div>
       </div>
+    </div>
     <!-- </div> -->
   </header>
   <main>
